--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bip32": "^2.0.6",
     "bip39": "^3.0.4",
     "bs58": "^4.0.1",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
